Pom adaptions