@@ -5,20 +5,13 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.apgsga.service</groupId>
 	<artifactId>fpkggen</artifactId>
-	<version>0.2-SNAPSHOT</version>
+	<version>0.4-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<maven.compiler.target>17</maven.compiler.target>
 		<maven.compiler.source>17</maven.compiler.source>
-
-		<!-- The Antlr tool version is specified with
-		antlr.version. The Antlr runtime is tied to the
-		version of antlr4test-maven-plugin.version. When Antlr
-		is release, the plugin has to be updated. -->
-		<antlr4test-maven-plugin.version>1.22</antlr4test-maven-plugin.version>
-		<antlr.version>4.11.1</antlr.version>
 
 		<junit.version>4.13.2</junit.version>
 	</properties>
@@ -38,17 +31,7 @@
 	</distributionManagement>
 
 	<dependencies>
-		<dependency>
-			<groupId>org.antlr</groupId>
-			<artifactId>antlr4-runtime</artifactId>
-			<version>${antlr.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.antlr</groupId>
-			<artifactId>antlr4-maven-plugin</artifactId>
-			<version>${antlr.version}</version>
-			<scope>compile</scope>
-		</dependency>
+
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -68,6 +51,16 @@
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
 			<version>33.0.0-jre</version>
+		</dependency>
+		<dependency>
+			<groupId>org.antlr</groupId>
+			<artifactId>stringtemplate</artifactId>
+			<version>4.0.2</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-cli</groupId>
+			<artifactId>commons-cli</artifactId>
+			<version>1.8.0</version>
 		</dependency>
 	</dependencies>
 	<build>
@@ -112,6 +105,11 @@
 					<version>3.5</version>
 				</plugin>
 				<plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>exec-maven-plugin</artifactId>
+					<version>3.4.0</version>
+				</plugin>
+				<plugin>
 					<artifactId>maven-resources-plugin</artifactId>
 					<version>3.3.0</version>
 				</plugin>
@@ -151,43 +149,19 @@
 		</pluginManagement>
 		<plugins>
 			<plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>build-helper-maven-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>add-source</id>
-                        <phase>generate-sources</phase>
-                        <goals>
-                            <goal>add-source</goal>
-                        </goals>
-                        <configuration>
-                            <sources>
-                                <source>src/generated/java</source>
-                            </sources>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-			<plugin>
-				<artifactId>maven-resources-plugin</artifactId>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>build-helper-maven-plugin</artifactId>
 				<executions>
 					<execution>
-						<id>copy-resources</id>
-						<phase>validate</phase>
+						<id>add-source</id>
+						<phase>generate-sources</phase>
 						<goals>
-							<goal>copy-resources</goal>
+							<goal>add-source</goal>
 						</goals>
 						<configuration>
-							<outputDirectory>${basedir}/target/generated-sources/antlr4/plsql</outputDirectory>
-							<resources>
-								<resource>
-									<directory>${basedir}/src/main/antlr4/plsql/java</directory>
-									<filtering>true</filtering>
-								</resource>
-							</resources>
-							<delimiters>
-								<delimiter>///{*}</delimiter>
-							</delimiters>
+							<sources>
+								<source>src/generated/java</source>
+							</sources>
 						</configuration>
 					</execution>
 				</executions>
@@ -199,72 +173,76 @@
 					<target>17</target>
 					<encoding>utf8</encoding>
 					<meminitial>256m</meminitial>
-					<annotationProcessorPaths>
-						<path>
-							<groupId>org.projectlombok</groupId>
-							<artifactId>lombok</artifactId>
-							<version>1.18.28</version>
-						</path>
-					</annotationProcessorPaths>
 				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.antlr</groupId>
-				<artifactId>antlr4-maven-plugin</artifactId>
-				<version>${antlr.version}</version>
-				<configuration>
-					<visitor>true</visitor>
-					<listener>true</listener>
-				</configuration>
-				<executions>
-					<execution>
-						<goals>
-							<goal>antlr4</goal>
-						</goals>
-					</execution>
-				</executions>
 			</plugin>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>exec-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<phase>java</phase>
+						<goals>
+							<goal>exec</goal>
+						</goals>
+					</execution>
+				</executions>
 				<configuration>
-					<mainClass>com.affichage.it21.fpkg.service.FpkgGenerator</mainClass>
+					<executable>java</executable>
+					<arguments>
+						<argument>--add-exports</argument>
+						<argument>jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</argument>
+						<argument>--add-exports</argument>
+						<argument>jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</argument>
+						<argument>--add-exports</argument>
+						<argument>jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</argument>
+						<argument>--add-exports</argument>
+						<argument>jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</argument>
+						<argument>--add-exports</argument>
+						<argument>jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</argument>
+						<argument>--add-exports</argument>
+						<argument>jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</argument>
+						<argument>-classpath</argument>
+						<classpath />
+						<argument>com.affichage.it21.fpkg.service.main.MyBatisFPkgServiceGenerator</argument>
+						<argument>-t</argument>
+						<argument>target/generated-sources</argument>
+					</arguments>
 				</configuration>
 			</plugin>
 		</plugins>
 		<resources>
-            <resource>
-                <directory>src/generated/java</directory>
-                <includes>
-                    <include>**/*.*</include>
-                </includes>
-            </resource>
-            <resource>
-                <directory>src/main/resources</directory>
-            </resource>
-            <resource>
-                <directory>src/main/model</directory>
-                <includes>
-                    <include>**/*.dao</include>
-                </includes>
-            </resource>
-            <resource>
-                <directory>src/generated/metadata</directory>
-                <includes>
-                    <include>**/*.rdbms</include>
-                </includes>
-            </resource>
-            <resource>
-                <directory>src/generated/resources</directory>
-                <includes>
-                    <include>**/*.*</include>
-                </includes>
-            </resource>
-        </resources>
-        <testResources>
-            <testResource>
-                <directory>src/test/resources</directory>
-            </testResource>
-        </testResources>
+			<resource>
+				<directory>src/generated/java</directory>
+				<includes>
+					<include>**/*.*</include>
+				</includes>
+			</resource>
+			<resource>
+				<directory>src/main/resources</directory>
+			</resource>
+			<resource>
+				<directory>src/main/model</directory>
+				<includes>
+					<include>**/*.dao</include>
+				</includes>
+			</resource>
+			<resource>
+				<directory>src/generated/metadata</directory>
+				<includes>
+					<include>**/*.rdbms</include>
+				</includes>
+			</resource>
+			<resource>
+				<directory>src/generated/resources</directory>
+				<includes>
+					<include>**/*.*</include>
+				</includes>
+			</resource>
+		</resources>
+		<testResources>
+			<testResource>
+				<directory>src/test/resources</directory>
+			</testResource>
+		</testResources>
 	</build>
 </project>
